# PyBackup-package-installer

./: .gitignore  format.sh  linter.sh  main.py  pyproject.toml
.github/workflows/: tests.yml
src/pybackup/: core.py  exceptions.py  type.py  utils.py
src/tests/: utils.py
src/tests/src/: core_test.py  type_test.py
