[project]
name = "pybackup"
version = "0.1.0"
description = "Librairie pour gérer des backups avec rdiff-backup"
authors = [{ name = "tendryAxel" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rdiff-backup>=2.2.6",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-emoji>=0.2.0",
    "pytest-md>=0.2.0",
    "ruff>=0.11.13",
]

[tool.pytest.ini_options]
testpaths = ["src/tests/src"]
